<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:id="@+id/pid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:paddingRight="10dip"
        android:text="Product Name"
        android:textSize="17dip"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="none"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:paddingRight="10dip"
        android:text=""
        android:textSize="25dip" />

    <TextView
        android:id="@+id/link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:paddingRight="10dip"
        android:text="@string/descr_tikets"
        android:textSize="17dip" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/promo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
         android:layout_marginTop="10dp"
            android:layout_weight="8"
            android:gravity="top"
            android:textSize="20dp"
            android:onClick="editClick"
            android:text="@string/app_name"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="15dp"
            android:background="@color/colorPrimary"
            android:onClick="copy"
            android:text="скопировать"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:onClick="myclick"
            android:text="перейти в магазин"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:paddingRight="10dip"
        android:text="@string/promocodeqest"
        android:textSize="17dip" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bac"
        android:backgroundTint="@color/bac"
        android:onClick="banerclick"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="186dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/coins" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/hasback"
                android:textColor="@color/colorPrimaryDark"


                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/gift100"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button

                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="@color/green"
                android:gravity="center"
                android:onClick="banerclick"
                android:text="Подробнее"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>